--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,8 @@
 <body>
 
 <div class="container-fluid">
-  <h1 style="color:green;">Java Home Web Application!!!!</h1>
+  <h1 style="color:green;">This is Java Home Web Application!!!!</h1>
+  <h2> All the best for CI/CD! </h2>
 </div>
 
 </body>
