--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
 <div class="container-fluid">
   <h1 style="color:green;">This is Java Home Web Application!!!!</h1>
   <h2> All the best for CI/CD! </h2>
+  <h2> This is a CI/CD output </h2>
 </div>
 
 </body>
