--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,7 @@
   <h1 style="color:green;">Changed Header!</h1>
   <h2> All the best for CI/CD! </h2>
   <h2> This is a CI/CD output </h2>
+  <h3> Working? </h3>
 </div>
 
 </body>
