--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,10 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1 style="color:green;">Changed Header!!</h1>
-  <h2> All the best for CI/CD! </h2>
-  <h2> This is a CI/CD output </h2>
-  <h3> Working? </h3>
+  <h1 style="color:green;">Check this web page out!</h1>
 </div>
 
 </body>
