--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1 style="color:green;">Check this web page out!</h1>
+  <h1 style="color:green;">AYEEEEEE CHIMPIIIIIII</h1>
 </div>
 
 </body>
