--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1 style="color:green;">AYEEEEEE CHIMPIIIIIII...</h1>
+  <h1 style="color:green;">Continuously Integrated! Continuously Deployed!</h1>
 </div>
 
 </body>
